# hadoop-gpl-compression

./: CHANGES.txt  build.xml  index.html  ivy.xml
ivy/: libraries.properties
src/java/com/hadoop/compression/lzo/: LzoCodec.java  LzoCompressor.java  LzoDecompressor.java  LzopCodec.java
src/java/com/hadoop/mapred/: LzoLineRecordReader.java  LzoTextInputFormat.java
src/native/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
src/native/impl/: config.h.in
src/native/impl/lzo/: LzoCompressor.c  LzoDecompressor.c
src/native/m4/: compression_utils.m4
src/test/com/hadoop/mapred/: TestLzoTextInputFormat.java
src/test/com/hadoop/mapreduce/: TestLzoLazyLoading.java  TestLzoTextInputFormat.java
